--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -18,6 +18,13 @@
 
     <dependencies>
 
+        <!--引入Eureka客户端依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <!--引入自定义的api通用包，包括Entity支付Payment-->
         <dependency>
             <groupId>com.gavin.cloud</groupId>
