--- a/cloud-provider-payment8081/pom.xml
+++ b/cloud-provider-payment8081/pom.xml
@@ -22,6 +22,14 @@
 <!--            <groupId>com.alibaba.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
 <!--        </dependency>-->
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <!--springboot整合web组件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
