--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>cloud-eureka-server7002</module>
         <module>cloud-provider-zookeeper-payment8010</module>
         <module>cloud-consumer-zookeeper-order80</module>
+        <module>cloud-provider-consul-payment8006</module>
+        <module>cloud-consumer-consul-order80</module>
 
 
     </modules>
