--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
         <module>cloud-consumer-zookeeper-order80</module>
         <module>cloud-provider-consul-payment8006</module>
         <module>cloud-consumer-consul-order80</module>
+        <module>cloud-consumer-feign-order80</module>
+        <module>cloud-eureka-mono-server7005</module>
+        <module>cloud-provider-hystrix-payment8005</module>
 
 
     </modules>
