--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>cloud-eureka-mono-server7005</module>
         <module>cloud-provider-hystrix-payment8005</module>
         <module>cloud-api-commons</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
+        <module>cloud-gateway9527</module>
 
 
     </modules>
