--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>cloud-api-commons</module>
         <module>cloud-consumer-hystrix-dashboard9001</module>
         <module>cloud-gateway9527</module>
+        <module>cloud-config-bus-center3344</module>
+        <module>cloud-config-bus-client3355</module>
 
 
     </modules>
