--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <module>cloud-gateway9527</module>
         <module>cloud-config-bus-center3344</module>
         <module>cloud-config-bus-client3355</module>
+        <module>cloud-provider-stream-rabbitmq8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
 
 
     </modules>
